# plc

./: CMakeLists.txt
docs/: A_module_interface.md  A_module_report_notes.md  D_semantic_interface.md  D_semantic_report_notes.md
include/ast/: ast.h  ast_printer.h
include/codegen/: riscv_generator.h
include/common/: token.h
include/ir/: ir.h  ir_builder.h
include/parser/: parser.h
include/semantic/: semantic_checker.h
src/: main.cpp
src/ast/: ast_printer.cpp
src/codegen/: riscv_generator.cpp
src/ir/: ir_builder.cpp
src/parser/: parser.cpp
src/semantic/: semantic_checker.cpp
tests/: parser_cases.md  semantic_checker_tests.cpp
